# kosmos-explorer

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
public/: index.html
src/: App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  lib.rs  oidc.rs
src/components/: TauriToolBar.js
src/components/menu/: index.js
src/containers/applications/: index.js
src/containers/applications/apps/: discord.js  explorer.js  spotify.js  whiteboard.js
src/containers/applications/apps/assets/: fileexpo.scss
src/reducers/: clouds.js  dir.json  files.js  index.js  menu.js
src/utils/: cloudApi.js
